# OgbujiPT

./: .coveragerc  .flake8  .gitignore  AICONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEMP.txt  noxfile.py  pyproject.toml  requirements-pgvector.txt  temp1.txt
.github/: workflows
.github/workflows/: main.yml  publish.yml  python-publish.yml
demo/: PGvector_demo.ipynb  README.md  alpaca_multitask_fix_xml.py  alpaca_simple_fix_xml.py  alpaca_simple_qa_discord.py  chat_doc_folder.py  chat_pdf_streamlit_ui.py  chat_pdf_streamlit_ui_OLD.py  chat_web_selects.py  database_testing.ipynb  demo.env  docker-compose.yaml  function_calling.py  language.toml  multiprocess.py  qa_discord.py  simple_fix_xml.py  simple_qa_discord.py
demo/kgraph/: README.md  simple_onya_demo.py
demo/pg-hybrid/: README.md  chat_doc_folder_pg.py  chat_with_hybrid_kb.py  hybrid_rerank_demo.py  hybrid_search.ipynb  hybrid_search_demo.py
demo/ram-store/: README.md  chat_with_memory.py  simple_search_demo.py
demo/sample-docs/: south_nigeria_early_history.docx
demo/sample_docs/: crossriver-wikipedia.md
demos/: alpaca_multitask_fix_xml.py  alpaca_simple_fix_xml.py
pgtest/: EXAMPLE.env  database_testing.py  docker-compose.yaml  init.sql  pg_hba.conf
pylib/: __about__.py  __init__.py  async_helper.py  config.py  embedding_helper.py  html_helper.py  llm_wrapper.py  text_helper.py  word_loom.py
pylib/embedding/: __init__.py  pgvector.py  pgvector_chat.py  pgvector_data.py  pgvector_data_doc.py  pgvector_doc.py  pgvector_dupe.py  pgvector_message.py  qdrant.py
pylib/llm/: wrapper.py
pylib/memoization/: __init__.py  pgmemo.py
pylib/memory/: base.py  metadata.py
pylib/model_style/: airoboros.py  alpaca.py  alvic.py  vicuna.py  wizard_vicuna.py
pylib/model_styles/: __init__.py
pylib/prompting/: __init__.py  basic.py  model_style.py
pylib/retrieval/: __init__.py  dense.py  graph.py  hybrid.py  sparse.py
pylib/store/: __init__.py  memory.py  ram.py
pylib/store/kgraph/: __init__.py  onya_store.py
pylib/store/postgres/: __init__.py  pgmemo.py  pgvector.py  pgvector_data.py  pgvector_dupe.py  pgvector_message.py  pgvector_sparse.py
pylib/store/qdrant/: collection.py
pylib/text/: html.py  splitter.py
resources/wordloom/: sample.toml
test/: __init__.py  compose.mockPGv.yml  conftest.py  test_airoboros_obedient_prompting.py  test_alpaca_prompting.py  test_alvic_prompting.py  test_config.py  test_embedding_helper.py  test_llm_wrapper.py  test_model_style.py  test_ogbujipt.py  test_text_splitter.py  test_text_w_apostrophe.ipynb  test_vicuna_prompting.py  test_word_loom.py
test/embedding/: README.md  conftest.py  test_pgvector.py  test_pgvector_data.py  test_pgvector_doc.py  test_pgvector_message.py  test_qdrant.py
test/prompt_formatting/: test_airoboros_obedient_prompting.py  test_alpaca_prompting.py  test_orca_prompting.py  test_vicuña_prompting.py
test/resource/onya/: companies.onya  people.onya
test/retrieval/: test_graph.py
test/store/: README.md  conftest.py  test_pgvector_data.py  test_qdrant.py
test/store/kgraph/: test_onya_store.py
test/test_prompts/: test_airoboros_obedient_prompting.py  test_orca_prompting.py  test_vicuña_prompting.py
util/: constraints-apple-silicon.txt  download-model.py
