[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OgbujiPT"
dynamic = ["version"]
description = 'Client-side tools for using large language models, full service (e.g. ChatGPT & Bard) or locally hosted (e.g. LLaMA derivatives)'
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Uche Ogbuji", email = "uche@ogbuji.net" },
  { name = "Osi Ogbuji", email = "osita@ogbuji.net" },
  { name = "Aidan Reese", email = "aidanreese.professional@gmail.com" },
  { name = "Kai Schuyler Gonzalez", email = "kai.schuyler@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  # Core LLM
  "openai>=1.1.0",
  "tomli",
  "amara",

  # Memory & Knowledge Bank
  "onya>=0.1.0",           # GraphRAG knowledge graphs
  "chonkie",               # Document chunking
  "rank-bm25",             # Sparse retrieval (BM25)
  "sentence_transformers",
  "rerankers[transformers]",  # Cross-encoder reranking

  # Production utilities
  "structlog",             # Structured logging
  "tenacity",              # Retry logic
  "httpx",                 # Async HTTP client

  # MCP protocol
  "mcp",                   # Model Context Protocol
]

[project.optional-dependencies]
# Extra requirements for project contributors & other developers
dev = [
  "build",
  "twine",
  "hatch",
  "pipdeptree",
  "ruff",
  "pytest",
  "pytest-mock",
]

testall = [
  "ruff",
  "pytest-httpx",
  "pytest-asyncio",
  "respx",
  "pgvector",
  "asyncpg",
  "qdrant-client>=1.10.0",
]

[project.urls]
Documentation = "https://github.com/OoriData/OgbujiPT#readme"
Issues = "https://github.com/OoriData/OgbujiPT/issues"
Source = "https://github.com/OoriData/OgbujiPT"

[tool.hatch.version]
path = "pylib/__about__.py"

# Package configuration
# Note: We only remap pylib->ogbujipt for wheels, not for sdist
# This ensures both direct wheel builds and wheels-from-sdist work correctly
[tool.hatch.build.targets.wheel]
only-include = ["pylib", "resources"]

[tool.hatch.build.targets.wheel.sources]
"pylib" = "ogbujipt"
"resources" = "ogbujipt/resources"

[tool.hatch.build.targets.sdist]
# Preserve original pylib structure in sdist so wheel-from-sdist can find it
only-include = [
    "pylib",
    "resources",
    "test",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# Note: hatch environments don't work well with our pylib→ogbujipt source remapping.
# The path remapping in [tool.hatch.build.targets.wheel.sources] only applies during wheel building,
# not in dev environments. Hatch's dev-mode uses editable installs which can't apply
# the remapping, and dev-mode=false means no install happens at all.
#
# We prefer proper installation over dev-mode shortcuts anyway.
# Use: `uv pip install -U . && pytest test/`
[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-mock",
  "pytest-httpx",
  "pytest-asyncio",
]
dev-mode = false
[tool.hatch.envs.default.scripts]
test = "pytest {args:test}"
test-cov = "coverage run -m pytest {args:test}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:pylib/ogbujipt test}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = ["E", "F"]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["ogbujipt"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"test/**/*" = ["PLR2004", "S101", "TID252"]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
# "path/to/file.py" = ["E402"]  # in specific file.py
# Ignore `D` rules everywhere except for the `src/` directory.
"!pylib/**.py" = ["D"]
# Ignore `E501` (line too long) in Jupyter notebooks
"*.ipynb" = ["E501"]
# Ignore `E501` (line too long) in the following files:
"demo/pg-hybrid/hybrid_search_demo.py" = ["E501"]
"demo/pg-hybrid/chat_with_hybrid_kb.py" = ["E501"]
"demo/pg-hybrid/hybrid_rerank_demo.py" = ["E501"]

[tool.coverage.run]
source_pkgs = ["ogbujipt", "test"]
branch = true
parallel = true
omit = [
  "pylib/__about__.py",
]

[tool.coverage.paths]
ogbujipt = ["pylib", "*/pylib"]
test = ["test", "*/test"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
